--- a/androidApp/src/androidMain/res/values/strings.xml
+++ b/androidApp/src/androidMain/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">My application</string>
+    <string name="err">Check your internet connection or try again later</string>
 </resources>
